# fastapi

./: README.md  pyproject.toml  requirements.txt
