[tool.poetry]
name = "dp2_test_back"
version = "0.1.0"
description = ""
authors = ["CrimsonShadow <a20130263@pucp.pe>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
